terraform/security.tf
resource "aws_security_group" "react_app_sg" {
  name        = "ecommerce-sg"
  description = "Allow HTTP and SSH"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["5.38.29.154/32"] 
  }

  # Outbound rules (Required to download Docker/Jenkins)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
